// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurricModalErrorContent should render additional when supplied 1`] = `
<div>
  <div
    class="sc-aXZVg sc-gEvEer iXSzFI fVNIMq"
  >
    <h1
      class="sc-eldPxv sc-fbfc102a-0 ioPmOs jTTcqg"
    >
      404
    </h1>
    <h2
      class="sc-eldPxv cULEmf"
    >
      Missing!
    </h2>
    <p
      class="sc-ikkxIA jLdkNc"
    >
      Close this modal
    </p>
  </div>
</div>
`;

exports[`CurricModalErrorContent should render correctly 1`] = `
<div>
  <div
    class="sc-aXZVg sc-gEvEer iXSzFI fVNIMq"
  >
    <h1
      class="sc-eldPxv sc-fbfc102a-0 ioPmOs jTTcqg"
    >
      404
    </h1>
    <h2
      class="sc-eldPxv cULEmf"
    >
      Missing!
    </h2>
  </div>
</div>
`;
